Lots of refactoring.
- Better subclassable Credentials class. Fill in your credentials in MyCredentials()
- Work on sub CPLEX and CP class started.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 *.class
 Diet.java.lp
 /out/
+src/MyDevFinalV4Credentials.java
+src/MyProdBetaV4Credentials.java
+src/resources/esso.cpo
+src/resources/mymodel.sav
+src/MyDevFinalV4Credentials.java
