readme and credentiasl trestructure

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ src/MyProdBetaV4Credentials.java
 src/resources/esso.cpo
 src/resources/mymodel.sav
 src/MyDevFinalV4Credentials.java
+src/MyQAFinalV4Credentials.java
